--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
-body {
-    background-color: blueviolet;
+.calculator{
+    height: 400px;
+    width: 280px;
+    background-color: lightcoral;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 10px;
+    border: 1px solid;
+    border-radius: 10px;
+}
+.main-bar{
+    margin-bottom: 20px;
+    text-align: right;
+    font-size: 23px;
+    font-weight: bold;
+
+}
+.button-area{
+
+}
+.btn{
+    font-size: 20px;
+    width: 60px;
+    cursor: pointer;
+}
+.line{
+    margin-bottom: 10px;
+}
+.last input{
+    width: 100%;
 }
